@@ -25,6 +25,8 @@
    be trimmed in the same way as the primary sequence.
  - Expose sampleFraction via API and command line for read-quality-stats mode
  - Make fasta-to-compact mode more callable via API
+ - reformat-compact-reads during 'mutate' will no longer complain when there is no sequence-pair that it
+   cannot mutate (mutation will not be attempted nor complained about if sequence.length is zero).
 1.9.1
  - fasta-to-compact mode: fix bug that prevented checking that quality encoding are in the allowed range.
    quality score must now be converted within the correct score range before the compact-reads file can
